fix: ameliore la visibilité de l'icone délégataire

--- a/web/b3desk/static/css/global.css
+++ b/web/b3desk/static/css/global.css
@@ -171,6 +171,11 @@ form.delete {
   mask-image: url("../dsfr-v1.14.0/icons/user/user-add-fill.svg");
 }
 
+.delegated-icon::before {
+  --icon-size: 2rem !important;
+  margin-left:0.5rem;
+}
+
 @keyframes modal-overlay{
 	0% {
 	  opacity: 0
